--- a/p8105_hw6_blm2156.md
+++ b/p8105_hw6_blm2156.md
@@ -6,14 +6,14 @@ Britney Mazzetta
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ───────────────────────────────────────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ────────────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.2
     ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
     ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
     ## ✔ readr   1.3.1     ✔ forcats 0.4.0
 
-    ## ── Conflicts ──────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ── Conflicts ───────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
@@ -57,3 +57,22 @@ btw
     ## # … with 4,332 more rows, and 10 more variables: mheight <dbl>,
     ## #   momage <dbl>, mrace <fct>, parity <dbl>, pnumlbw <dbl>, pnumsga <dbl>,
     ## #   ppbmi <dbl>, ppwt <dbl>, smoken <dbl>, wtgain <dbl>
+
+## Regression Model for Birthweight
+
+``` r
+reg_model1 = lm(bwt ~ babysex + gaweeks + momage + mheight + parity + ppbmi + pnumlbw + smoken, data = btw)
+
+reg_model1
+```
+
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ babysex + gaweeks + momage + mheight + parity + 
+    ##     ppbmi + pnumlbw + smoken, data = btw)
+    ## 
+    ## Coefficients:
+    ##   (Intercept)  babysexfemale        gaweeks         momage        mheight  
+    ##     -2043.004        -98.906         64.749          8.794         34.221  
+    ##        parity          ppbmi        pnumlbw         smoken  
+    ##       121.910         15.411             NA         -7.545
