--- a/p8105_hw6_blm2156.md
+++ b/p8105_hw6_blm2156.md
@@ -6,14 +6,14 @@ Britney Mazzetta
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ────────────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ─────────────────────────────────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.2
     ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
     ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
     ## ✔ readr   1.3.1     ✔ forcats 0.4.0
 
-    ## ── Conflicts ───────────────── tidyverse_conflicts() ──
+    ## ── Conflicts ────────────────────────────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
@@ -60,6 +60,13 @@ btw
 
 ## Regression Model for Birthweight
 
+This predictors that were selected for this regression model (baby’sex,
+gestational age in weeks, mother’s age at delivery, mother’s height,
+parity, mother’s pre-pregnancy BMI, average number of cigarettes smoked
+per day during pregnancy) were selected based on literatures reviews on
+child’s
+birthweight.
+
 ``` r
 reg_model1 = lm(bwt ~ babysex + gaweeks + momage + mheight + parity + ppbmi + pnumlbw + smoken, data = btw)
 
@@ -76,3 +83,26 @@ reg_model1
     ##     -2043.004        -98.906         64.749          8.794         34.221  
     ##        parity          ppbmi        pnumlbw         smoken  
     ##       121.910         15.411             NA         -7.545
+
+## Plot of model residuals against fitted values
+
+``` r
+res_plot1 = 
+btw%>%
+modelr::add_residuals(reg_model1) %>%
+modelr::add_predictions(reg_model1) %>%
+  ggplot(aes(x = pred, y = resid)) +
+  geom_point()
+```
+
+    ## Warning in predict.lm(model, data): prediction from a rank-deficient fit
+    ## may be misleading
+    
+    ## Warning in predict.lm(model, data): prediction from a rank-deficient fit
+    ## may be misleading
+
+``` r
+res_plot1
+```
+
+![](p8105_hw6_blm2156_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
