--- a/p8105_hw6_blm2156.md
+++ b/p8105_hw6_blm2156.md
@@ -6,14 +6,14 @@ Britney Mazzetta
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ─────────────────────────────────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ───────────────────────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.2
     ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
     ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
     ## ✔ readr   1.3.1     ✔ forcats 0.4.0
 
-    ## ── Conflicts ────────────────────────────────────── tidyverse_conflicts() ──
+    ## ── Conflicts ──────────────────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
@@ -92,7 +92,7 @@ btw%>%
 modelr::add_residuals(reg_model1) %>%
 modelr::add_predictions(reg_model1) %>%
   ggplot(aes(x = pred, y = resid)) +
-  geom_point()
+  geom_point(color = "orange")
 ```
 
     ## Warning in predict.lm(model, data): prediction from a rank-deficient fit
