--- a/p8105_hw6_blm2156.md
+++ b/p8105_hw6_blm2156.md
@@ -6,14 +6,14 @@ Britney Mazzetta
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ───────────────────────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ──────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.2
     ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
     ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
     ## ✔ readr   1.3.1     ✔ forcats 0.4.0
 
-    ## ── Conflicts ──────────────────────────── tidyverse_conflicts() ──
+    ## ── Conflicts ─────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
@@ -106,3 +106,45 @@ res_plot1
 ```
 
 ![](p8105_hw6_blm2156_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
+\#\# Comparison models Predictors for this birthweight model are length
+at birth and gestational age.
+
+``` r
+comp_reg_model1 = lm(bwt ~ blength + gaweeks, data = btw)
+
+comp_reg_model1
+```
+
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ blength + gaweeks, data = btw)
+    ## 
+    ## Coefficients:
+    ## (Intercept)      blength      gaweeks  
+    ##    -4347.67       128.56        27.05
+
+Predictors for this birthweight model are head circumference, length,
+sex, and all interactions (including the three-way interaction) between
+these
+
+``` r
+comp_reg_model2 = lm(bwt ~ bhead + blength + babysex + bhead*blength + bhead*babysex + blength*babysex + bhead*blength*babysex, data = btw)
+
+comp_reg_model2
+```
+
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ bhead + blength + babysex + bhead * blength + 
+    ##     bhead * babysex + blength * babysex + bhead * blength * babysex, 
+    ##     data = btw)
+    ## 
+    ## Coefficients:
+    ##                 (Intercept)                        bhead  
+    ##                  -7176.8170                     181.7956  
+    ##                     blength                babysexfemale  
+    ##                    102.1269                    6374.8684  
+    ##               bhead:blength          bhead:babysexfemale  
+    ##                     -0.5536                    -198.3932  
+    ##       blength:babysexfemale  bhead:blength:babysexfemale  
+    ##                   -123.7729                       3.8781
