--- a/p8105_hw6_blm2156.md
+++ b/p8105_hw6_blm2156.md
@@ -6,16 +6,20 @@ Britney Mazzetta
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ──────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ──────────────────────────────────────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.2
     ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
     ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
     ## ✔ readr   1.3.1     ✔ forcats 0.4.0
 
-    ## ── Conflicts ─────────── tidyverse_conflicts() ──
+    ## ── Conflicts ─────────────────────────────────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
+
+``` r
+library(modelr)
+```
 
 # Problem 1
 
@@ -148,3 +152,31 @@ comp_reg_model2
     ##                     -0.5536                    -198.3932  
     ##       blength:babysexfemale  bhead:blength:babysexfemale  
     ##                   -123.7729                       3.8781
+
+Cross Validation Prediction Error
+
+``` r
+cv_bwt = crossv_mc(btw, 100)
+
+cv_bwt = 
+  cv_bwt %>%
+  mutate(reg_model1 = map(train, ~lm(bwt ~ babysex + gaweeks + momage + mheight + parity + ppbmi + pnumlbw + smoken, data = .x)),
+  comp_reg_model1 = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
+  comp_reg_model2 = map(train, ~lm(bwt ~ bhead + blength + babysex + bhead*blength + bhead*babysex + blength*babysex + bhead*blength*babysex, data = .x))
+  ) %>%
+  mutate(rmse_reg_model1 = map2_dbl(reg_model1, test, ~rmse(model = .x, data = .y)),
+  rmse_comp_reg_model1 = map2_dbl(comp_reg_model1, test, ~rmse(model = .x, data = .y)),
+  rmse_comp_reg_model2 = map2_dbl(comp_reg_model2, test, ~rmse(model = .x, data = .y)))
+
+cv_bwt %>%
+  select(starts_with("rmse")) %>%
+  pivot_longer(
+    everything(),
+    names_to = "model",
+    values_to = "rmse",
+    names_prefix = "rmse_") %>% 
+  mutate(model = fct_inorder(model)) %>% 
+  ggplot(aes(x = model, y = rmse)) + geom_violin(color = "blue")
+```
+
+![](p8105_hw6_blm2156_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
