--- a/p8105_hw6_blm2156.Rmd
+++ b/p8105_hw6_blm2156.Rmd
@@ -106,7 +106,7 @@ weather_df =
 ## Bootstrap
 
 ```{r}
-set.seed(1)
+set.seed(3)
 
 fcn_boots = function(df) {
   sample_frac(df, size = 0.5, replace = TRUE)
@@ -118,5 +118,39 @@ boot_straps =
     strap_number = 1:5000,
     strap_sample = rerun(5000, fcn_boots(weather_df))
   )
+
+boot_straps
+```
+## Analyzing Bootstrap Samples - lnb0*b1
+
+```{r}
+bootstrap_results = 
+  boot_straps %>% 
+  mutate(
+    models = map(strap_sample, ~lm(tmax ~ tmin, data = .x)),
+    results = map(models, broom::tidy)) %>% 
+  unnest(cols = c(results)) %>%
+  select(strap_number, term, estimate) %>% 
+  pivot_wider(names_from = term, values_from = estimate) %>%
+  janitor::clean_names() %>% 
+    rename(b0 = intercept, b1 = tmin) %>%
+     mutate(ln_b0b1 = log(b0*b1)) %>%
+  select(-b0, -b1)
+
+
+```
+
+## Analyzing Bootstrap Samples - r^2
+
+```{r}
+bootstrap_results = 
+  boot_straps %>%
+  mutate(
+    models= map(strap_sample, ~lm(tmax~tmin, data = .x)), 
+    results = map(models, broom::glance)) %>%
+  select(-strap_sample, -models) %>%
+  unnest(cols = c(results)) %>%
+  select(strap_number, r.squared)
+
 ```
 
