--- a/p8105_hw6_blm2156.md
+++ b/p8105_hw6_blm2156.md
@@ -219,7 +219,7 @@ weather_df =
 ## Bootstrap
 
 ``` r
-set.seed(1)
+set.seed(3)
 
 fcn_boots = function(df) {
   sample_frac(df, size = 0.5, replace = TRUE)
@@ -231,4 +231,80 @@ boot_straps =
     strap_number = 1:5000,
     strap_sample = rerun(5000, fcn_boots(weather_df))
   )
+
+boot_straps
 ```
+
+    ## # A tibble: 5,000 x 2
+    ##    strap_number strap_sample      
+    ##           <int> <list>            
+    ##  1            1 <tibble [182 × 6]>
+    ##  2            2 <tibble [182 × 6]>
+    ##  3            3 <tibble [182 × 6]>
+    ##  4            4 <tibble [182 × 6]>
+    ##  5            5 <tibble [182 × 6]>
+    ##  6            6 <tibble [182 × 6]>
+    ##  7            7 <tibble [182 × 6]>
+    ##  8            8 <tibble [182 × 6]>
+    ##  9            9 <tibble [182 × 6]>
+    ## 10           10 <tibble [182 × 6]>
+    ## # … with 4,990 more rows
+
+## Analyzing Bootstrap Samples - lnb0\*b1
+
+``` r
+bootstrap_results = 
+  boot_straps %>% 
+  mutate(
+    models = map(strap_sample, ~lm(tmax ~ tmin, data = .x)),
+    results = map(models, broom::tidy)) %>% 
+  unnest(cols = c(results)) %>%
+  select(strap_number, term, estimate) %>% 
+  pivot_wider(names_from = term, values_from = estimate) %>%
+  janitor::clean_names() %>% 
+    rename(b0 = intercept, b1 = tmin) %>%
+     mutate(ln_b0b1 = log(b0*b1)) %>%
+  select(-b0, -b1)
+```
+
+## Analyzing Bootstrap Samples - r^2
+
+``` r
+bootstrap_results2 = 
+  boot_straps %>%
+  mutate(
+    models= map(strap_sample, ~lm(tmax~tmin, data = .x)), 
+    results = map(models, broom::glance)) %>%
+  select(-strap_sample, -models) %>%
+  unnest(cols = c(results)) %>%
+  select(strap_number, r.squared)
+```
+
+## Plot of betas and r^2
+
+``` r
+plot1 = bootstrap_results %>%
+  ggplot(aes(x = ln_b0b1)) +
+  geom_density(color = "purple")
+
+plot1
+```
+
+![](p8105_hw6_blm2156_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+The plot of the log of b0\*b1 against density appears approximately
+normal. Therefore, we can infer that the 95% confidence interval is
+about (1.925, 2.075)
+
+``` r
+plot2 = bootstrap_results2 %>%
+  ggplot(aes(x = r.squared)) +
+  geom_density(color = "purple")
+
+plot2
+```
+
+![](p8105_hw6_blm2156_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+
+The plot of the R2 against the density is approximately normal.
+Therefore, we can infer that the confidence interval is about (0.8875,
+0.9375).
