--- a/p8105_hw6_blm2156.md
+++ b/p8105_hw6_blm2156.md
@@ -6,14 +6,14 @@ Britney Mazzetta
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ───────────────────────────────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ──────────────────────────────────────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.2
     ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
     ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
     ## ✔ readr   1.3.1     ✔ forcats 0.4.0
 
-    ## ── Conflicts ──────────────────────────────────── tidyverse_conflicts() ──
+    ## ── Conflicts ─────────────────────────────────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
@@ -186,6 +186,12 @@ cv_bwt %>%
 
 ![](p8105_hw6_blm2156_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
 
+Based on the RMSE values, the second comparison regression model
+performed the best. Comparison regression model 1 was second best. The
+model that I created based on literature and a hypothesized structure
+performed the worst with the highest RMSE value after comparing the
+models using a cross-validation prediction error method.
+
 # Problem 2
 
 ``` r
@@ -291,9 +297,10 @@ plot1
 ```
 
 ![](p8105_hw6_blm2156_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
-The plot of the log of b0\*b1 against density appears approximately
-normal. Therefore, we can infer that the 95% confidence interval is
-about (1.925, 2.075)
+The plot of the log of b0b1 against density appears approximately
+normal. This could be due to the log transformation that was performed.
+Therefore, we can infer that the 95% confidence interval for log(b0b1)
+for this plot is about (1.925, 2.075)
 
 ``` r
 plot2 = bootstrap_results2 %>%
@@ -305,6 +312,6 @@ plot2
 
 ![](p8105_hw6_blm2156_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
 
-The plot of the R2 against the density is approximately normal.
-Therefore, we can infer that the confidence interval is about (0.8875,
+The plot of the R2 against the density is slightly left-skewed. The 95%
+confidence intervals for r^2 for this plot are about equal to (0.8875,
 0.9375).
